[gd_scene load_steps=9 format=3 uid="uid://34fkmw4iqwaf"]

[ext_resource type="Script" path="res://HUD/ShopPanel.gd" id="1_x1y4n"]
[ext_resource type="Texture2D" uid="uid://duluh15t8bxlr" path="res://HUD/Pictures/Exit.png" id="2_3g5dt"]
[ext_resource type="Texture2D" uid="uid://cdjtc4ohdtyq8" path="res://HUD/Pictures/Shop.png" id="4_2x8wq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_glvue"]
bg_color = Color(0.431373, 0.505882, 0.568627, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o1iyp"]
expand_margin_left = 15.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lb30i"]
bg_color = Color(0.2, 0.2, 0.2, 1)

[sub_resource type="Animation" id="Animation_2mnru"]
resource_name = "popUpUniversal"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d273h"]
_data = {
"popUpUniversal": SubResource("Animation_2mnru")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ShopPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(336, 166)
script = ExtResource("1_x1y4n")

[node name="Label" type="Label" parent="ShopPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.354167
anchor_top = 0.753086
anchor_right = 0.630208
anchor_bottom = 0.842593
offset_top = -3.05176e-05
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
text = "Select your item"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Item1" type="Button" parent="ShopPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.291667
anchor_top = 0.395062
anchor_right = 0.375
anchor_bottom = 0.54321
offset_bottom = 3.05176e-05
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(43, 2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_glvue")
action_mode = 0
text = "1"
metadata/_edit_group_ = true
metadata/_edit_use_anchors_ = true

[node name="Item2" type="Button" parent="ShopPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.402778
anchor_top = 0.395062
anchor_right = 0.486111
anchor_bottom = 0.54321
offset_bottom = 3.05176e-05
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(43, 2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_glvue")
action_mode = 0
text = "2"
metadata/_edit_group_ = true
metadata/_edit_use_anchors_ = true

[node name="Item3" type="Button" parent="ShopPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.513889
anchor_top = 0.395062
anchor_right = 0.597222
anchor_bottom = 0.54321
offset_bottom = 3.05176e-05
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(43, 2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_glvue")
action_mode = 0
text = "3"
metadata/_edit_group_ = true
metadata/_edit_use_anchors_ = true

[node name="Item4" type="Button" parent="ShopPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.625
anchor_top = 0.395062
anchor_right = 0.708333
anchor_bottom = 0.54321
offset_bottom = 3.05176e-05
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(43, 2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_glvue")
action_mode = 0
text = "4"
metadata/_edit_group_ = true
metadata/_edit_use_anchors_ = true

[node name="ExitButton" type="Button" parent="ShopPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.729126
anchor_top = 0.792582
anchor_right = 0.77935
anchor_bottom = 0.888971
offset_left = -33.9531
offset_top = -1.59308
offset_right = 183.189
offset_bottom = 242.947
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.210392, 0.203454)
pivot_offset = Vector2(43, 2)
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_o1iyp")
theme_override_styles/hover = SubResource("StyleBoxFlat_lb30i")
action_mode = 0
icon = ExtResource("2_3g5dt")
alignment = 2
metadata/_edit_group_ = true
metadata/_edit_use_anchors_ = true

[node name="Shop" type="Sprite2D" parent="ShopPanel"]
position = Vector2(576, 324)
scale = Vector2(0.557561, 0.464812)
texture = ExtResource("4_2x8wq")
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="ShopPanel"]
libraries = {
"": SubResource("AnimationLibrary_d273h")
}

[connection signal="pressed" from="ShopPanel/Item1" to="ShopPanel" method="_on_item_1_pressed"]
[connection signal="pressed" from="ShopPanel/Item2" to="ShopPanel" method="_on_item_2_pressed"]
[connection signal="pressed" from="ShopPanel/Item3" to="ShopPanel" method="_on_item_3_pressed"]
[connection signal="pressed" from="ShopPanel/Item4" to="ShopPanel" method="_on_item_4_pressed"]
[connection signal="pressed" from="ShopPanel/ExitButton" to="ShopPanel" method="_on_exit_button_pressed"]
